@@ -1,6 +1,6 @@
 ###############################################################################
 # Makefile for the Malloc library.
-# $Id: Makefile.all.in,v 1.22 1993/08/25 18:24:11 gray Exp $
+# $Id: Makefile.all.in,v 1.23 1993/08/27 00:55:08 gray Exp $
 ###############################################################################
 
 # default root installation directory
@@ -80,6 +80,22 @@ installlib : installincs $(LIBRARY) $(OBJS_IN) $(INFOFILE)
 # .PHONY : install
 install : installlib $(UTIL)
 	$(INSTALL_PROGRAM) $(UTIL) $(bindir)
+
+config.status :
+	sh ./configure
+
+const.h : const.h.in config.status
+	rm -f $@
+	sh ./config.status
+
+conf.h : conf.h.in config.status
+	rm -f $@
+	sh ./config.status
+
+malloc_dbg.h : malloc_dbg.1 const.h malloc_dbg.2
+	rm -f $@ $@.t
+	cat malloc_dbg.1 const.h malloc_dbg.2 > $@.t
+	mv $@.t $@
 
 $(LIBRARY) : $(OBJS)
 	ar cr $(LIBRARY) $?
