@@ -1,5 +1,9 @@
 Thu Aug 26 19:06:45 1993  Gray Watson  (gray at toaster.antaire.com)
 
+	* Removed MALLOC_TRACE and malloc_dbg -t.  Replaced by
+	MALLOC_ADDRESS:0 functionality and logging of a message every time
+	malloc_address is seen.
+
 	* Fixed some dumb const problems.  Have to now preprocess
 	malloc_dbg.h from start const.h end.  Yeach!
 
@@ -36,7 +40,8 @@ Tue Aug 17 16:22:20 1993  Gray Watson  (gray at toaster.antaire.com)
 Thu Aug 12 18:11:01 1993  Gray Watson  (gray at toaster.antaire.com)
 
 	* Added MALLOC_TRACE variable and malloc_dbg -t functionality for
-	tracing an address and logging messages about it.
+	tracing an address and logging messages about it.  NOTE: this
+	was later removed -- replaced by MALLOC_ADDRESS:0.
 
 Tue Aug 10 16:43:07 1993  Gray Watson  (gray at toaster.antaire.com)
 
